--- a/app/styles/test.scss
+++ b/app/styles/test.scss
@@ -34,7 +34,7 @@ body {
     width: 100%;
     position: absolute; 
     max-height: 100vh;
-    overflow: hidden;
+    //overflow: hidden;
     top: 0;
     left: 0;
 
